--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -27,11 +27,11 @@
             <zan-card
               card-class="test-card"
               thumb="https://img.yzcdn.cn/upload_files/2016/11/25/FpqPXlrMRjKwJs8VdTu3ZDJCj4j5.jpeg?imageView2/2/w/200/h/200/q/90/format/jpeg"
-              price="999.99"
-              title="红烧牛肉【虚拟商品】【有库存】【有sku】"
-              num="2"
-              desc="3000克 50%"
+              price="噜啦嘿"
+              title="中兴大道160号"
+              desc="13674637162"
               status="已发货"
+              time="2018/10/01 08:30"
             >
             </zan-card>
           </zan-panel>
